fix z-index modal

--- a/src/components/UI/modals/modals.module.css
+++ b/src/components/UI/modals/modals.module.css
@@ -19,6 +19,8 @@
     justify-content: flex-start;
 
     overflow-y: scroll;
+
+    z-index: 5;
 }
 .sectionName{
     background-color: rgb(19, 4, 131);
